--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,11 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2</title>
+    <title>Just Tech News</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
-
-<body>
-
-</body>
 
 </html>
