--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Just Tech News</title>
+    <title>Actively Distanced</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
+
+<body>
+    <main>
+        {{{body}}}
+    </main>
+</body>
 
 </html>
