--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,5 +9,8 @@
     <input type="date" id="date" name="date"><br>
     <label for="time">Choose a time for your event:</label>
     <input type="time" id="time" name="time" min="08:00" max="20:00" required><br>
-    <input type="file" name="photo" />
+    <input type="file" name="photo" /><br>
+    <input type="submit" value="Submit">
 </form>
+
+<img src='' />
