added photo uploading and post model

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,10 @@
 <h1>Create a post</h1>
 
 <form action="/profile" method="post" enctype="multipart/form-data">
-    <label for="fname">Title</label><br>
-    <input type="text" id="fname" name="fname"><br>
-    <label for="lname">Description</label><br>
-    <input type="text" id="lname" name="lname"><br>
+    <label for="title">Title</label><br>
+    <input type="text" id="title" name="title"><br>
+    <label for="description">Description</label><br>
+    <input type="text" id="description" name="description"><br>
     <label for="date">Choose a date for your event:</label>
     <input type="date" id="date" name="date"><br>
     <label for="time">Choose a time for your event:</label>
@@ -13,4 +13,4 @@
     <input type="submit" value="Submit">
 </form>
 
-<img src='' />
+{{!-- <img src='' /> --}}
