sign-up handlebars updated

--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -1,4 +1,11 @@
-<style type="text/css">
+
+{{!-- Semantic-UI --}} 
+{{!-- reference link: https://github.com/Semantic-Org/Semantic-UI --}}
+  <script src="/assets/library/jquery.min.js"></script>
+  <script src="/dist/form.js"></script>
+  <script src="/dist/transition.js"></script>
+
+  <style type="text/css">
     body {
       background-color: #DADADA;
     }
@@ -49,6 +56,9 @@
       ;
     })
   ;
+  </script>
+</head>
+<body>
 
 <!-- <h1 class="ui center aligned header">Responsive Elements</h1>
 
@@ -58,8 +68,7 @@
   <div class="ui stackable two column very relaxed grid container" style="position:relative;">
     <div class="column">
       <!-- <div class="ui segment"><img src="assets/images/Login-view.png" alt="login-view" style="width:345px;height:400px;"> -->
-      <div class="ui segment">
-          <img src="assets/images/Login-view2.png" alt="login-view" style="width:360px;height:500px;">
+      <div class="ui segment"><img src="assets/images/Login-view2.png" alt="login-view" style="width:360px;height:500px;">
       </div>
     </div>
     
@@ -72,9 +81,7 @@
             <h2 class="ui teal image header">
               <!-- <img src="assets/images/logo.png" class="image"> -->
               <div class="content">
-                <br>
-                Sign up to join Safe & Fun activities 
-              </br>
+                Sign-up to join safe & fun activities
               </div>
             </h2>
             <form class="ui large form">
@@ -95,10 +102,12 @@
               </div>
         
               <div class="ui error message"></div>
+        
             </form>
       </div>
     </div>
   </div>
+
 
     <div class="ui message">
       Already have an account? <a href="#">Sign In</a>
@@ -106,6 +115,3 @@
   </div>
 </div>
 
-  <script src="assets/library/jquery.min.js"></script>
-  <script src="../dist/components/form.js"></script>
-  <script src="../dist/components/transition.js"></script>
