--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -3,5 +3,5 @@
     <p>{{description}}</p><br>
     <p>{{date}}</p><br>
     <p>{{time}}</p><br>
-    <img src='{{image_url}}' />
+    <img src=`{{image_url}}` />
 </div>
