--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,23 @@
-<h1>Create a post</h1>
+<div class="ui middle aligned center aligned grid">
+    <div class="column">
+        <h1 class="ui teal image header">Create a post</h1>
 
-<form action="/profile" method="post" enctype="multipart/form-data">
-    <label for="title">Title</label><br>
-    <input type="text" id="title" name="title"><br>
-    <label for="description">Description</label><br>
-    <input type="text" id="description" name="description"><br>
-    <label for="date">Choose a date for your event:</label>
-    <input type="date" id="date" name="date"><br>
-    <label for="time">Choose a time for your event:</label>
-    <input type="time" id="time" name="time" min="08:00" max="20:00" required><br>
-    <input type="file" name="photo" /><br>
-    <input type="submit" value="Submit">
-</form>
+        <div action="/profile" method="post" enctype="multipart/form-data" class="ui large form">
+            <form action="/profile" method="post" enctype="multipart/form-data" class="ui large form">
+                <div class="ui stacked segment">
+                    <label for="title">Title</label><br>
+                    <input type="text" id="title" name="title"><br>
+                    <label for="description">Description</label><br>
+                    <input type="text" id="description" name="description"><br>
+                    <label for="date">Choose a date for your event:</label>
+                    <input type="date" id="date" name="date"><br>
+                    <label for="time">Choose a time for your event:</label>
+                    <input type="time" id="time" name="time" min="08:00" max="20:00" required><br>
+                    <input type="file" name="photo" /><br>
+                    <input type="submit" value="Submit" class="ui fluid large teal submit button">
+                </div>
+            </form>
+        </div>
+
+    </div>
+</div>
