--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<div class="ui middle aligned center aligned grid">
+{{!-- <div class="ui middle aligned center aligned grid">
     <div class="column">
         <h1 class="ui teal image header">Create a post</h1>
 
@@ -18,6 +18,20 @@
                 </div>
             </form>
         </div>
-
     </div>
-</div>
+</div> --}}
+
+<ul>
+    {{#each posts as |post|}}
+    <li>
+        {{!-- {{> post-info post }} --}}
+        <div>
+            <h1>{{dataValues.title}}</h1><br>
+            <p>{{dataValues.description}}</p><br>
+            <p>{{dataValues.date}}</p><br>
+            <p>{{dataValues.time}}</p><br>
+            <img src={{dataValues.image_url}} />
+        </div>
+    </li>
+    {{/each}}
+</ul>
