--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,8 +10,7 @@
     <div>
         <button type="submit">login</button>
     </div>
-</form>
-
+</form><br>
 <form class="signup-form">
     <div>
         <label for="username-signup">username:</label>
@@ -31,54 +30,3 @@
 </form>
 
 <script src="/javascript/login.js"></script>
-
-{{!-- <div class="ui stackable two column very relaxed grid container" style="position:relative;">
-    <div class="column">
-        <!-- <div class="ui segment"><img src="assets/images/Login-view.png" alt="login-view" style="width:345px;height:400px;"> -->
-        <div class="ui segment"><img src="assets/images/Login-view2.png" alt="login-view"
-                style="width:360px;height:500px;">
-        </div>
-    </div>
-
-    <!-- login  -->
-    <div class="column">
-        <div class="ui segment">
-
-            <div class="ui middle aligned center aligned grid">
-                <div class="column">
-                    <h2 class="ui teal image header">
-                        <!-- <img src="assets/images/logo.png" class="image"> -->
-                        <div class="content">
-                            Sign-up to join safe & fun activities
-                        </div>
-                    </h2>
-                    <form class="ui large form">
-                        <div class="ui stacked segment">
-                            <div class="field">
-                                <div class="ui left icon input">
-                                    <i class="user icon"></i>
-                                    <input type="text" name="email" placeholder="E-mail address">
-                                </div>
-                            </div>
-                            <div class="field">
-                                <div class="ui left icon input">
-                                    <i class="lock icon"></i>
-                                    <input type="password" name="password" placeholder="Password">
-                                </div>
-                            </div>
-                            <div class="ui fluid large teal submit button">Sign Up</div>
-                        </div>
-
-                        <div class="ui error message"></div>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="ui message">
-            Already have an account? <a href="#">Sign In</a>
-        </div>
-    </div>
-</div> --}}
