--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,32 +1,19 @@
 <form class="login-form">
     <div>
-        <label for="email-login">email:</label>
-        <input type="text" id="email-login" />
+        <p class="hide" id="not-found">That username does not exist! Try again or join.</p>
+        <label for="username-login">username:</label>
+        <input type="text" id="username-login" />
     </div>
     <div>
         <label for="password-login">password:</label>
         <input type="password" id="password-login" />
     </div>
     <div>
-        <button type="submit">login</button>
-    </div>
-</form><br>
-<form class="signup-form">
-    <div>
-        <label for="username-signup">username:</label>
-        <input type="text" id="username-signup" />
+        <button type="submit">Login</button>
     </div>
     <div>
-        <label for="email-signup">email:</label>
-        <input type="text" id="email-signup" />
-    </div>
-    <div>
-        <label for="password-signup">password:</label>
-        <input type="password" id="password-signup" />
-    </div>
-    <div>
-        <button type="submit">signup</button>
+        <a href="/sign-up"><i class="fas fa-user-plus"></i> Sign Up Instead</a>
     </div>
 </form>
 
-<script src="/javascript/login.js"></script>
+<script src="/javascript/login.js"></script> 
