--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
         <button type="submit">Login</button>
     </div>
     <div>
-        <a href="/sign-up"><i class="fas fa-user-plus"></i> Sign Up Instead</a>
+        <a href="/signup"><i class="fas fa-user-plus"></i> Sign Up Instead</a>
     </div>
 </form>
 
