--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -15,122 +15,4 @@
         <a href="/login">Login Instead</a>
     </div>
 </form>
-<script src="/public/javascript/singup.js"></script>
-
-
-{{!-- Semantic-UI --}} 
-{{!-- reference link: https://github.com/Semantic-Org/Semantic-UI --}}
-  {{!-- <script src="/assets/library/jquery.min.js"></script>
-  <script src="/dist/form.js"></script>
-  <script src="/dist/transition.js"></script>
-
-  <style type="text/css">
-    body {
-      background-color: #DADADA;
-    }
-    body > .grid {
-      height: 100%;
-    }
-    .image {
-      margin-top: -100px;
-    }
-    .column {
-      max-width: 450px;
-    }
-  </style>
-  <script>
-  $(document)
-    .ready(function() {
-      $('.ui.form')
-        .form({
-          fields: {
-            email: {
-              identifier  : 'email',
-              rules: [
-                {
-                  type   : 'empty',
-                  prompt : 'Please enter your e-mail'
-                },
-                {
-                  type   : 'email',
-                  prompt : 'Please enter a valid e-mail'
-                }
-              ]
-            },
-            password: {
-              identifier  : 'password',
-              rules: [
-                {
-                  type   : 'empty',
-                  prompt : 'Please enter your password'
-                },
-                {
-                  type   : 'length[6]',
-                  prompt : 'Your password must be at least 6 characters'
-                }
-              ]
-            }
-          }
-        })
-      ;
-    })
-  ;
-  </script>
-</head>
-<body>
-
-<!-- <h1 class="ui center aligned header">Responsive Elements</h1>
-
-
-<h3 class="ui center aligned header">Responsive Vertical Divider</h3> -->
-
-  <div class="ui stackable two column very relaxed grid container" style="position:relative;">
-    <div class="column">
-      <!-- <div class="ui segment"><img src="assets/images/Login-view.png" alt="login-view" style="width:345px;height:400px;"> -->
-      <div class="ui segment"><img src="assets/images/Login-view2.png" alt="login-view" style="width:360px;height:500px;">
-      </div>
-    </div>
-    
-    <!-- login  -->
-    <div class="column">
-      <div class="ui segment">
-
-        <div class="ui middle aligned center aligned grid">
-          <div class="column">
-            <h2 class="ui teal image header">
-              <!-- <img src="assets/images/logo.png" class="image"> -->
-              <div class="content">
-                Sign-up to join safe & fun activities
-              </div>
-            </h2>
-            <form class="ui large form">
-              <div class="ui stacked segment">
-                <div class="field">
-                  <div class="ui left icon input">
-                    <i class="user icon"></i>
-                    <input type="text" name="email" placeholder="E-mail address">
-                  </div>
-                </div>
-                <div class="field">
-                  <div class="ui left icon input">
-                    <i class="lock icon"></i>
-                    <input type="password" name="password" placeholder="Password">
-                  </div>
-                </div>
-                <div class="ui fluid large teal submit button">Log in</div>
-              </div>
-        
-              <div class="ui error message"></div>
-        
-            </form>
-      </div>
-    </div>
-  </div>
-
-
-    <div class="ui message">
-      New to us? <a href="#">Sign Up</a>
-    </div>
-  </div>
-</div> --}}
-
+<script src="/javascript/sign-up.js"></script>
