--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,19 +1,140 @@
-<form class="login-form">
+{{!-- <form class="login-form">
     <div>
-        <p class="hide" id="not-found">That username does not exist! Try again or join.</p>
-        <label for="username-login">username:</label>
-        <input type="text" id="username-login" />
+        <label for="email-login">email:</label>
+        <input type="text" id="email-login" />
     </div>
     <div>
         <label for="password-login">password:</label>
         <input type="password" id="password-login" />
     </div>
     <div>
-        <button type="submit">Login</button>
+        <button type="submit">login</button>
+    </div>
+</form><br>
+<form class="signup-form">
+    <div>
+        <label for="username-signup">username:</label>
+        <input type="text" id="username-signup" />
     </div>
     <div>
-        <a href="/sign-up"><i class="fas fa-user-plus"></i> Sign Up Instead</a>
+        <label for="email-signup">email:</label>
+        <input type="text" id="email-signup" />
+    </div>
+    <div>
+        <label for="password-signup">password:</label>
+        <input type="password" id="password-signup" />
+    </div>
+    <div>
+        <button type="submit">signup</button>
+    </div>
+</form> --}}
+{{!-- 
+<script src="/javascript/login.js"></script> --}}
+
+ <script>
+  $(document)
+    .ready(function() {
+      $('.ui.form')
+        .form({
+          fields: {
+            email: {
+              identifier  : 'email',
+              rules: [
+                {
+                  type   : 'empty',
+                  prompt : 'Please enter your e-mail'
+                },
+                {
+                  type   : 'email',
+                  prompt : 'Please enter a valid e-mail'
+                }
+              ]
+            },
+            password: {
+              identifier  : 'password',
+              rules: [
+                {
+                  type   : 'empty',
+                  prompt : 'Please enter your password'
+                },
+                {
+                  type   : 'length[6]',
+                  prompt : 'Your password must be at least 6 characters'
+                }
+              ]
+            }
+          }
+        })
+      ;
+    })
+  ;
+  </script>
+
+
+  <div class="ui stackable two column very relaxed grid container" style="position:relative;">
+    <div class="column">
+        <h2 class="ui teal image header">
+      <div class="ui segment">
+          <img src="assets/images/Login-view2.png" class-"style="width:360px;height:500px;" />
+
+      </div>
+      </h2>
+    </div>
+    
+    <div class="container">
+    </div>
+    <!-- login  -->
+    <div class="column">
+      <div class="ui segment">
+
+        <div class="ui middle aligned center aligned grid">
+          <div class="column">
+            <h2 class="ui teal image header">
+              <!-- <img src="assets/images/logo.png" class="image"> -->
+              <div class="content-1">
+                Log-in to your account
+              </div>
+            </h2>
+            <form class="ui large form">
+              <div class="ui stacked segment">
+                <div class="field">
+                  <div class="ui left icon input">
+                    <i class="user icon"></i>
+                    <input type="text" name="email" placeholder="E-mail address">
+                  </div>
+                </div>
+                <div class="field">
+                  <div class="ui left icon input">
+                    <i class="lock icon"></i>
+                    <input type="password" name="password" placeholder="Password">
+                  </div>
+                </div>
+                <div class="button">Login</div>
+              </div>
+        
+              <div class="ui error message"></div>
+        
+            </form>
+      </div>
+    </div>
+  </div>
+
+  <h2 class="ui teal image header">
+      New to us?
+  </div>
+  <form class="signup-form">
+    <div>
+        <label for="username-signup">username:</label>
+        <input type="text" id="username-signup" />
+    </div>
+    <div>
+         <div class="field">
+                  <div class="ui left icon input">
+                    <i class="lock icon"></i>
+                    <input type="password" name="password" placeholder="Password">
+                  </div>
+    </div>
+    <div>
+        <button type="submit">signup</button>
     </div>
 </form>
-
-<script src="/javascript/login.js"></script> 
