--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,138 @@
-<ul>
-    {{#each posts as |post|}}
-    <li>
-        {{!-- {{> post-info post }} --}}
-        <div>
-            <h1>{{dataValues.title}}</h1><br>
-            <p>{{dataValues.description}}</p><br>
-            <p>{{dataValues.date}}</p><br>
-            <p>{{dataValues.time}}</p><br>
-            <img src={{dataValues.image_url}} />
+
+<link type="text/css" href="public/stylesheets/style.css" rel="stylesheet" />
+
+
+<div class="col-lg-12">
+    <!-- 1st post  starts here-->
+    <div class="cardbox">
+        <div class="cardbox-heading">
+            <div class="media m-0">
+                <div class="d-flex mr-3">
+                </div>
+                <div class="media-body">
+                    <p class="m-0">{{username}}</p>
+                    <small><span>{{dataValues.date}}</span></small><br>
+                    <small><span>{{dataValues.description}}</span></small>
+                </div>
+            </div>
         </div>
-    </li>
-    {{/each}}
-</ul>
+        <div class="cardbox-item">
+            <a href="#myModal" data-toggle="modal">
+                <img class="img-responsive" src="{{dataValues.image_url}}">
+            </a>
+        </div>
+    </div>
+    <div class="cardbox-like">
+        <ul>
+            <li><a href="#"><i class="fa fa-heart"></i></a><span> {{likes}} 786,286</span></li>
+            <li><a href="#myModal" data-toggle="modal" title="" class="com"><i class="fa fa-comments"></i></a> <span
+                    class="span-last"> {{comments}} 126,400</span></li>
+        </ul>
+    </div>
+
+    <!-- 2nd post  starts here-->
+    <div class="cardbox">
+        <div class="cardbox-heading">
+            <div class="media m-0">
+                <div class="d-flex mr-3">
+                </div>
+                <div class="media-body">
+                    <p class="m-0">{{username}}</p>
+                    <small><span>{{dataValues.date}}</span></small><br>
+                    <small><span>{{dataValues.description}}</span></small>
+                </div>
+            </div>
+        </div>
+        <div class="cardbox-item">
+            <a href="#myModal" data-toggle="modal">
+                <img class="img-responsive" src="{{dataValues.image_url}}">
+            </a>
+        </div>
+    </div>
+    <div class="cardbox-like">
+        <ul>
+            <li><a href="#"><i class="fa fa-heart"></i></a><span> 786,286</span></li>
+            <li><a href="#myModal" data-toggle="modal" title="" class="com"><i class="fa fa-comments"></i></a> <span
+                    class="span-last"> 126,400</span></li>
+        </ul>
+    </div>
+
+</div>
+
+<div class="trending-box hidden-xs hidden-md">
+    <div class="row">
+        <div class="col-lg-12">
+            <a href="photo_stories.html">
+                <h4>Ourdoor Actvities</h4>
+            </a>
+        </div>
+
+    </div>
+</div>
+<div class="trending-box hidden-xs hidden-md">
+    <div class="row">
+        <div class="col-lg-12">
+            <a href="photo_stories.html">
+                <h4>Virtual Actvities</h4>
+            </a>
+        </div>
+    </div>
+</div>
+
+<!-- Modal section -->
+<div id="myModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+
+                <div class="row">
+
+                    <div class="col-md-8 modal-image">
+                        <img class="img-responsive" src="{{dataValues.image_url}}">
+                    </div>
+                    <div class="col-md-4 modal-meta">
+                        <div class="modal-meta-top">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                                <span aria-hidden="true">×</span><span class="sr-only">Close</span>
+                            </button>
+                            <div class="img-poster clearfix">
+                                <h4> {{username}} </h4>
+                                <h4>{{dataValues.time}} </h4>
+                            </div>
+
+                            <ul class="img-comment-list">
+                                <li>
+                                    <div class="comment-text">
+                                        <h4><a href=" {{routes}}"> {{username}}</a></h4>
+                                        <p>{{comment_text}} placeholder comments...</p> <span
+                                            class="date sub-text">{{comment_date}}</span>
+                                    </div>
+                                </li>
+                            </ul>
+
+                            <div class="modal-meta-bottom">
+                                <ul>
+                                    <li><a class="modal-like" href="#"><i class="fa fa-heart"></i></a><span
+                                            class="modal-one"> 786,286</span> |
+                                        <a class="modal-comment" href="#"><i class="fa fa-comments"></i></a><span>
+                                            786,286</span> </li>
+
+                                    <div class="comment-body">
+                                        <input class="form-control input-sm" type="text"
+                                            placeholder="Write your comment...">
+                                    </div>
+
+                                    </li>
+                                </ul>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="assets/jquery.min.js"></script>
+<script src="assets/bootstrap.min.js"></script>
