--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,19 +39,19 @@
                 <h3>Home</h3>
             </a>
         </div>
-        <div class="p-2 nav-icon-lg clean-black">
+        <div class="p-2 nav-icon-lg dark-black">
             <a class="nav-icon" href="/create-post"><em class="fa fa-plus"></em>
                   <span> + </span>
                 <h3>Add an activity</h3>
             </a>
         </div>
-        <div class="p-2 nav-icon-lg clean-black">
+        <div class="p-2 nav-icon-lg dark-black">
             <a class="nav-icon" href="/myactivity"><i class="fa fa-heart"></i>
                   <span> 💚 </span>
                 <h3>My activity</h3>
             </a>
         </div>
-        <div class="p-2 nav-icon-lg clean-black">
+        <div class="p-2 nav-icon-lg dark-black">
             <a class="nav-icon" href="/logout"><em class="fa fa-minus"></em>
                   <span> ⚪️ </span>
                  {{#if loggedIn}}
