--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,24 +13,8 @@
             <a class="navbar-brand" href="/homepage">Actively Distanced</a>
      </header>
 
-<!-- Navi section -->
-<header class="tr-header">
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-            </div>
 
-            <div class="navbar-left">
-                <div class="collapse navbar-collapse" id="navbar-collapse">
-                    <ul class="nav navbar-nav">
-                    </ul>
-                </div>
-            </div> 
-        </div>
-    </nav>
-</header>
-
-	 <!-- Navbar Second Section -->
+	 <!-- Navbar Section -->
 <section class="nav-sec">
     <div class="d-flex justify-content-between">
         <div class="p-2 nav-icon-lg mint-green">
