--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,8 +10,10 @@
 
 <body>
     <header>
+        <nav class="navbar navbar-default">
             <a class="navbar-brand" href="/homepage">Actively Distanced</a>
-     </header>
+        </nav>
+    </header>
 
 
 	 <!-- Navbar Section -->
