--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,15 +1,13 @@
- 
- <div class="ui stackable two column very relaxed grid container" style="position:relative;">
-    <div class="column">
-        <h2 class="ui teal image header">
+<div class="ui stackable two column very relaxed grid container" style="position:relative;">
+  <div class="column">
+    <h2 class="ui teal image header">
       <div class="ui segment">
-          <img src="assets/images/homepage.png" style="width:360px;height:500px;" />
-
+        <img src="assets/images/homepage.png" style="width:360px;height:500px;" />
       </div>
-      </h2>
-    </div>
-    
-    <div class="container">
+    </h2>
+  </div>
+
+  <div class="container">
     <div class="column">
       <div class="ui segment">
 
@@ -36,13 +34,12 @@
                 </div>
                 <div class="button">Login</div>
               </div>
-          <a class="btn btn-dark " href="/sign-up" role="button">New to us? Click here to register.</a>
-
+              <a class="btn btn-dark " href="/sign-up" role="button">New to Actively Distanced? Click here to
+                sign-up!</a>
             </form>
+          </div>
+        </div>
       </div>
     </div>
-      </div>
-    </div>
-    </div>
-
-
+  </div>
+</div>
