--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -1,4 +1,4 @@
-<br>
+{{!-- <br>
 <h2 class="ui teal image header">Create an activity</h2>
 <br>
 
@@ -38,4 +38,27 @@
   <input type="submit" value="Share" class="ui fluid large teal submit button">
 </div>	
 </form>
-<script src="/javascript/add-post.js"></script>
+<script src="/javascript/add-post.js"></script> --}}
+
+<div class="ui middle aligned center aligned grid">
+  <div class="column">
+    <h1 class="ui teal image header">Create a post</h1>
+
+    <div action="/profile" method="post" enctype="multipart/form-data" class="ui large form">
+      <form action="/profile" method="post" enctype="multipart/form-data" class="ui large form">
+        <div class="ui stacked segment">
+          <label for="title">Title</label><br>
+          <input type="text" id="title" name="title"><br>
+          <label for="description">Description</label><br>
+          <input type="text" id="description" name="description"><br>
+          <label for="date">Choose a date for your event:</label>
+          <input type="date" id="date" name="date"><br>
+          <label for="time">Choose a time for your event:</label>
+          <input type="time" id="time" name="time" min="08:00" max="20:00" required><br>
+          <input type="file" name="photo" /><br>
+          <input type="submit" value="Submit" class="ui fluid large teal submit button">
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
