--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,53 +12,50 @@
 <body>
     <header>
         <nav class="navbar navbar-default">
-            <a class="navbar-brand" href="/homepage">Actively Distanced</a>
+            <a class="navbar-brand" href="/">Actively Distanced</a>
         </nav>
     </header>
 
 
-	 <!-- Navbar Section -->
-<section class="nav-sec">
-    <div class="d-flex justify-content-between">
-        <div class="p-2 nav-icon-lg mint-green">
-            <a class="nav-icon" href="/homepage"><em class="fa fa-home"></em>
-                <span> 🏠 </span>
-                <h3>Home</h3>
-            </a>
+    <!-- Navbar Section -->
+    <section class="nav-sec">
+        <div class="d-flex justify-content-between">
+            <div class="p-2 nav-icon-lg mint-green">
+                <a class="nav-icon" href="/"><em class="fa fa-home"></em>
+                    <span> 🏠 </span>
+                    <h3>Home</h3>
+                </a>
+            </div>
+            <div class="p-2 nav-icon-lg dark-black">
+                <a class="nav-icon" href="/create-post"><em class="fa fa-plus"></em>
+                    <span> + </span>
+                    <h3>Add an activity</h3>
+                </a>
+            </div>
+            <div class="p-2 nav-icon-lg dark-black">
+                <a class="nav-icon" href="/myactivity"><i class="fa fa-heart"></i>
+                    <span> 💚 </span>
+                    <h3>My activities</h3>
+                </a>
+            </div>
+            <div class="p-2 nav-icon-lg dark-black">
+                <a class="nav-icon" href="/login"><i class="fa fa-minus"></i>
+                    <span> ⚪️ </span>
+                    <h3>Login</h3>
+                </a>
+            </div>
         </div>
-        <div class="p-2 nav-icon-lg dark-black">
-            <a class="nav-icon" href="/create-post"><em class="fa fa-plus"></em>
-                  <span> + </span>
-                <h3>Add an activity</h3>
-            </a>
-        </div>
-        <div class="p-2 nav-icon-lg dark-black">
-            <a class="nav-icon" href="/myactivity"><i class="fa fa-heart"></i>
-                  <span> 💚 </span>
-                <h3>My activity</h3>
-            </a>
-        </div>
-        <div class="p-2 nav-icon-lg dark-black">
-            <a class="nav-icon" href="/logout"><em class="fa fa-minus"></em>
-                  <span> ⚪️ </span>
-                 {{#if loggedIn}}
-                <a href="/">All Activites</a>
-                <button id="logout" class="btn-no-style">logout</button>
-                {{else}}
-                <h3 class="ui white image header" a href="/login">login</h3></a>
-                {{/if}}
-            </a>
-        </div>
-    </div>
-</section>
+    </section>
 
     <div class="wrapper">
-        
+
         <main>
             {{{ body }}}
         </main>
         <footer>
-          <center><h4 class="ui teal image header">Have fun with safe activities! </h4> </center> 
+            <center>
+                <h4 class="ui teal image header">Have fun with safe activities! </h4>
+            </center>
         </footer>
     </div>
 
