--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -1,46 +1,44 @@
- <div class="ui stackable two column very relaxed grid container" style="position:relative;">
-    <div class="column">
-        <h2 class="ui teal image header">
+<div class="ui stackable two column very relaxed grid container" style="position:relative;">
+  <div class="column">
+    <h2 class="ui teal image header">
       <div class="ui segment">
-          <img src="assets/images/Login-view2.png" class-"style="width:360px;height:500px;" />
+        <img src="assets/images/Login-view2.png" class="style=width:360px; height:500px;" />
 
       </div>
-      </h2>
-    </div>
-    
-    <div class="container">
-    </div>
-    <!-- signup  -->
-    <div class="column">
-      <div class="ui segment">
+    </h2>
+  </div>
 
-        <div class="ui middle aligned center aligned grid">
-          <div class="column">
-            <h2 class="ui teal image header">
-              <!-- <img src="assets/images/logo.png" class="image"> -->
-              <div class="content-1">
-                Log-in to your account
-              </div>
-            </h2>
-            <form class="ui large form signup-form">
-              <div class="ui stacked segment">
-                <div class="field">
-                  <div class="ui left icon input">
-                    <label for="username-login">username:</label>
-                    <input type="text" name="email" placeholder="E-mail address">
-                  </div>
-                </div>
-                <div class="field">
-                  <div class="ui left icon input">
-                    <label for="password-login">password:</label>
-                    <input type="password" name="password" placeholder="Password">
-                  </div>
-                </div>
-                <div class="button">Login</div>
-              </div>
-          <a class="btn btn-dark " href="/login" role="button">Already have an account? Click Here.</a>
+  <div class="container">
+  </div>
+  <!-- signup  -->
+  <div class="column">
+    <div class="ui segment">
 
-            </form>
+      <div class="ui middle aligned center aligned grid">
+        <div class="column">
+          <h2 class="ui teal image header">
+            <!-- <img src="assets/images/logo.png" class="image"> -->
+            <div class="content-1">
+              Sign-Up for an account
+            </div>
+          </h2>
+          <form class="signup-form">
+            <div>
+              <label for="username-signup">username:</label>
+              <input type="text" id="username-signup" />
+            </div>
+            <div>
+              <label for="password-signup">password:</label>
+              <input type="password" id="password-signup" />
+            </div>
+            <div>
+              <button type="submit">signup</button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
+</div>
+
+<script src="/javascript/login.js"></script>
