got sign up and log in working

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -139,7 +139,7 @@
     </div>
 </div>
 
-<script>
+{{!-- <script>
     $(document).ready(function () {
         $("#myBtn").click(function () {
             $("#myModal").modal({ keyboard: true });
@@ -148,6 +148,6 @@
             $("#myModal2").modal({ keyboard: false });
         });
     });
-</script>
+</script> --}}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
