--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="ui stackable two column very relaxed grid container" style="position:relative;">
+{{!-- <div class="ui stackable two column very relaxed grid container" style="position:relative;">
   <div class="column">
     <h2 class="ui teal image header">
       <div class="ui segment">
@@ -10,20 +10,21 @@
   <div class="container">
     <div class="column">
       <div class="ui segment">
-
         <div class="ui middle aligned center aligned grid">
           <div class="column">
+
             <h2 class="ui teal image header">
               <div class="content-1">
                 Log-in to your account
               </div>
             </h2>
+
             <form class="ui large form login-form">
               <div class="ui stacked segment">
                 <div class="field">
                   <div class="ui left icon input">
                     <label for="username-login">Username:</label>
-                    <input type="text" name="email" placeholder="E-mail address">
+                    <input type="text" name="username" placeholder="Username">
                   </div>
                 </div>
                 <div class="field">
@@ -37,9 +38,26 @@
               <a class="btn btn-dark " href="/sign-up" role="button">New to Actively Distanced? Click here to
                 sign-up!</a>
             </form>
+
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</div> --}}
+
+<form class="login-form">
+  <div>
+    <label for="username-login">username:</label>
+    <input type="text" id="username-login" />
+  </div>
+  <div>
+    <label for="password-login">password:</label>
+    <input type="password" id="password-login" />
+  </div>
+  <div>
+    <button type="submit">login</button>
+  </div>
+</form>
+
+<script src="/javascript/login.js"></script>
