--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
 
 
     <!-- Navbar Section -->
-    <section class="nav-sec">
+    <section class="nav-sec" id="navi-bar">
         <div class="d-flex justify-content-between">
             <div class="p-2 nav-icon-lg mint-green">
                 <a class="nav-icon" href="/"><em class="fa fa-home"></em>
@@ -59,9 +59,6 @@
         </footer>
     </div>
 
-    {{#if loggedIn}}
-    <script src="/javascript/logout.js"></script>
-    {{/if}}
 </body>
 
 </html>
