--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -1,4 +1,4 @@
-<div class="ui stackable two column very relaxed grid container" style="position:relative;">
+{{!-- <div class="ui stackable two column very relaxed grid container" style="position:relative;">
   <div class="column">
     <h2 class="ui teal image header">
       <div class="ui segment">
@@ -6,7 +6,7 @@
 
       </div>
     </h2>
-  </div>
+  </div> --}}
 
   <div class="container">
   </div>
@@ -41,4 +41,4 @@
   </div>
 </div>
 
-<script src="/javascript/login.js"></script>
+<script src="/javascript/sign-up.js"></script>
