--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,10 +20,9 @@
 .postbox{
   margin: auto;
   margin-top: 5px;
-  width: 100%;
+  width: 85%;
   padding: 20px;
 }
-
 
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin');
 html,
@@ -708,7 +707,7 @@ a.ui.teal.header:hover {
 color: #009c95 !important;
 }
 .ui.teal.dividing.header {
-border-bottom: 2px solid #00B5AD;
+border-bottom: 0px solid #00B5AD;
 }
 
 /*--------------
@@ -1555,9 +1554,9 @@ a.navbar-brand:hover {
 }
 
 .cardbox-like ul{
-  padding: 0px 0px 10px 0px !important;
+  padding: 0px 0px 10px 20px !important;
   font-size: 0px;	
-  text-align: center;
+  text-align: left;
 }
 .cardbox-like li:first-child {
   display: inline-block;
@@ -1852,9 +1851,9 @@ a.navbar-brand:hover {
 }
 .story-body h4{
   font-family: 'Abhaya Libre', serif;
-  font-size: 14px;
+  font-size: 12px;
   color: #fff;  
-  line-height: 1;
+  line-height: 0.5;
 }
 .story-body p{
   font-family: 'Abhaya Libre', serif;
@@ -1905,8 +1904,8 @@ a.navbar-brand:hover {
  font-family: 'Abhaya Libre', serif;	
  color: #000000;
  font-size: 14px;
- font-weight: 700;
- margin-bottom: 4px;
+ font-weight: 400;
+ margin-bottom: 0px;
 }
 .suggestion-box .name-box span {
  font-family: 'Abhaya Libre', serif;
