--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,8 +11,7 @@
             <h3 class="ui teal image header">{{user_id}}</h3></p>
             <h3 class="ui teal image header">{{dataValues.title}}</h3><br>
             <h4 class="ui black image header">{{dataValues.description}}</h4><br>
-            <h4 class="ui teal image header">{{dataValues.date}}</h4><br>
-            <h4 class="ui teal image header">{{dataValues.time}}</h4><br>
+            <h5 class="ui teal image header">{{dataValues.date}}</h4><h5 class="ui teal image header">{{dataValues.time}}</h4><br>
             <div class="cardbox-item">
             <a href="#myModal" data-toggle="modal">
 		    <img class="img-responsive media" src="{{dataValues.image_url}}">
