--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
+
 <div class="ui stackable two column very relaxed grid container" style="position:relative;">
   <div class="column">
     <h2 class="ui teal image header">
       <div class="ui segment">
-        <img src="assets/images/homepage.png" style="width:360px;height:500px;" />
       </div>
     </h2>
   </div>
@@ -32,7 +32,7 @@
                     <input type="password" name="password" placeholder="Password">
                   </div>
                 </div>
-                <div class="button">Login</div>
+                <button class="button">Login</button>
               </div>
               <a class="btn btn-dark " href="/sign-up" role="button">New to Actively Distanced? Click here to
                 sign-up!</a>
@@ -43,3 +43,4 @@
     </div>
   </div>
 </div>
+<script src="/javascript/login.js"></script>
